--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,18 +1,28 @@
 html {
   font-size: 14px;
+
+
 }
 
 @media (min-width: 768px) {
   html {
     font-size: 16px;
+
   }
+
 }
 
 html {
   position: relative;
   min-height: 100%;
+
+
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+   
+    background-color: #BDC9DF;
 }
+
+
