--- a/Views/Cliente/Index.cshtml
+++ b/Views/Cliente/Index.cshtml
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.ClienteBairro)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cidade.Id)
+                @Html.DisplayFor(modelItem => item.Cidade.CidadeNome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ClienteTelefone)
