--- a/Views/EntradaProduto/Index.cshtml
+++ b/Views/EntradaProduto/Index.cshtml
@@ -28,7 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Produto.Id)
+                @Html.DisplayFor(modelItem => item.Produto.ProdutoNome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DataEntradaProduto)
