--- a/Views/Cidade/Create.cshtml
+++ b/Views/Cidade/Create.cshtml
@@ -22,7 +22,7 @@
                 <select asp-for="EstadoId" class ="form-control" asp-items="ViewBag.EstadoId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
