--- a/Views/Cidade/Delete.cshtml
+++ b/Views/Cidade/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado.Id)
+            @Html.DisplayFor(model => model.Estado.EstadoNome)
         </dd>
     </dl>
     
