--- a/Views/Cliente/Create.cshtml
+++ b/Views/Cliente/Create.cshtml
@@ -52,7 +52,7 @@
                 <span asp-validation-for="ClienteTelefone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
