--- a/Views/Cliente/Delete.cshtml
+++ b/Views/Cliente/Delete.cshtml
@@ -51,7 +51,7 @@
             @Html.DisplayNameFor(model => model.Cidade)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cidade.Id)
+            @Html.DisplayFor(model => model.Cidade.CidadeNome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ClienteTelefone)
