--- a/Views/EntradaProduto/Delete.cshtml
+++ b/Views/EntradaProduto/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.Id)
+            @Html.DisplayFor(model => model.Produto.ProdutoNome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataEntradaProduto)
