--- a/Views/Estado/Create.cshtml
+++ b/Views/Estado/Create.cshtml
@@ -22,7 +22,7 @@
                 <select asp-for="PaisId" class ="form-control" asp-items="ViewBag.PaisId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
