--- a/Views/Estado/Details.cshtml
+++ b/Views/Estado/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Pais)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pais.Id)
+            @Html.DisplayFor(model => model.Pais.PaisNome)
         </dd>
     </dl>
 </div>
