--- a/Views/Produto/Create.cshtml
+++ b/Views/Produto/Create.cshtml
@@ -26,7 +26,7 @@
                 <select asp-for="FornecedorId" class ="form-control" asp-items="ViewBag.FornecedorId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
