--- a/Views/SaidaProduto/Create.cshtml
+++ b/Views/SaidaProduto/Create.cshtml
@@ -39,7 +39,7 @@
                 <select asp-for="TipoSaidaId" class ="form-control" asp-items="ViewBag.TipoSaidaId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
