--- a/Views/SaidaProduto/Index.cshtml
+++ b/Views/SaidaProduto/Index.cshtml
@@ -37,7 +37,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Produto.Id)
+                @Html.DisplayFor(modelItem => item.Produto.ProdutoNome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DataSaidaProduto)
@@ -46,13 +46,13 @@
                 @Html.DisplayFor(modelItem => item.QuantidadeSaida)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Id)
+                @Html.DisplayFor(modelItem => item.Usuario.UsuarioNome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Id)
+                @Html.DisplayFor(modelItem => item.Cliente.ClienteNome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TipoSaida.Id)
+                @Html.DisplayFor(modelItem => item.TipoSaida.TipoSaidaDescricao)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
