--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar-expand-sm navbar-toggleable-sm navbar-light bg-black border-bottom mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ProjetoFinal</a>
+                <a class="coloroioi" asp-area="" asp-controller="Home" asp-action="Index">ProjetoFinal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,43 +20,37 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">‎ </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cidade" asp-action="Index">Cidade</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">‎ </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cliente" asp-action="Index">Cliente</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cidade" asp-action="Index">Cidade</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="EntradaProduto" asp-action="Index">Entrada do produto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Index">Cliente</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Estado" asp-action="Index">Estado</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EntradaProduto" asp-action="Index">Entrada do produto</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Fornecedor" asp-action="Index">Fornecedor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Estado" asp-action="Index">Estado</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Pais" asp-action="Index">Pais</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Fornecedor" asp-action="Index">Fornecedor</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Produto" asp-action="Index">Produto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pais" asp-action="Index">Pais</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="SaidaProduto" asp-action="Index">Saida do produto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Index">Produto</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="TipoProduto" asp-action="Index">Tipo do produto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SaidaProduto" asp-action="Index">Saida do produto</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="TipoSaida" asp-action="Index">Tipo da saida</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TipoProduto" asp-action="Index">Tipo do produto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TipoSaida" asp-action="Index">Tipo da saida</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
                         </li>
                     </ul>
                 </div>
