--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -25,4 +25,26 @@ body {
     background-color: #BDC9DF;
 }
 
+.text-center {
+    background-color: lightslategray;
+    color: white;
+    border-radius: 2rem;
+}
+
+
+a {
+    color: white;
+}
+.container-fluid {
+    display: flex !important;
+    align-items: center;
+}
+
+.coloroioi {
+    color: #CACACA;
+    justify-content: center;
+    text-align: center;
+}
+
+
 
